############################################################################
## So@Gui@/man/man1/Makefile.am

include ../../src/Inventor/Xt/common/Makefile.common

############################################################################

BUILT_SOURCES = \
	$(SoGuiAllBuiltSources)

CLEANFILES = \
	$(SoGui_man_man1_BuiltMetaFiles)

DISTCLEANFILES = \
	$(SoGui_man_man1_BuiltFiles) \
	$(SoGui_man_man1_BuiltMetaFiles)

############################################################################

if BUILD_LIBRARY
man_MANS = \
	so@gui@-config.1
endif

